

2014-02-02 -> kevin    -> Add phpdoc to NZB.php, get closer to 80 chars per line, change a function to use the site class instance object instead of creating another instance of class site.
                       -> Quick cleanup of the ZipFile class.
                       -> Work more on sharing class.
                       -> Improve debug output on sharing class.
2014-02-02 -> jonnyboy -> fixed bug in convert_mysql_tables.php not converting releasenfo to dynamic innodb when using cinnodb
2014-02-01 -> jonnyboy -> fixed bug in nntpproxy.php, added option to run python binaries_threaded.py alt.binaries.teevee
                          added dereferrer to movies list
                          updated renaming scripts to reset id's when seachname is set
2014-02-01 -> kevin    -> Upd: Added phpdoc notes to NNTP.php, changed some functions to protected, objects to private.
                          Upd: Combined the doConnect and doConnectA methods in NNTP.php.
                          Upd: Encapsulate the evalution to make the expressions clearer.
                          Upd: Mention that to decode yenc, the library is a better alternative, remove TODO on doconnect_a.
                          Del: Removed pdo_notes.txt
2014-02-01 -> kaibosh  -> Update hardware section of README.md
                          Insert link to summary page produced by mymovielist
2014-02-01 -> niel     -> Upd: Moved one file (simple_html_dom.php) to nZEDb_LIBS. There are a few others we should move too.
                          Tidy up. Removed most commented out require_once lines.
                          Some formatting changes for coding standard
2014-01-30 -> bart39   -> check for requestid match before looping through group regex
                          moved all www.town.ag regexes to generic_town and check them before looping through groups
                          fixed duplicate case statement