@@ -11,6 +11,7 @@ Each update goes to the top of the file
                        -> Quick cleanup of the ZipFile class.
                        -> Work more on sharing class.
                        -> Improve debug output on sharing class.
+                       -> Write up schema for sharing.
 2014-02-02 -> jonnyboy -> fixed bug in convert_mysql_tables.php not converting releasenfo to dynamic innodb when using cinnodb
 2014-02-01 -> jonnyboy -> fixed bug in nntpproxy.php, added option to run python binaries_threaded.py alt.binaries.teevee
                           added dereferrer to movies list
